fix overflow flash msg

--- a/app/scripts/app.css
+++ b/app/scripts/app.css
@@ -12,7 +12,7 @@ background-color: #FFFFFF;
 }
 
 .info-text-header{
-color:#FFFFFF   
+  color:#FFFFFF
 }
 
 .input-box{
@@ -47,6 +47,26 @@ color:#FFFFFF
   background-color: #795548;
 }
 
+.msg-green{
+  display: inline;
+  border-radius: 4px;
+  border: 1px solid #999;
+  background-color: #388E3C;
+  color: #D7CCC8;
+  float: right;
+  font-size: 100%;
+}
+
+.msg-red{
+  display: inline;
+  border-radius: 4px;
+  border: 2px solid #999;
+  background-color: #D32F2F;
+  color: #D7CCC8;
+  float: right;
+  font-size: 100%;
+}
+
 .myarticle{
   display: block;
   padding: 9.5px;
@@ -70,43 +90,43 @@ color:#FFFFFF
 }
 
 /*.feed, .auth, .navigation, .content, .header, .footer, .container{
-  box-shadow: 0 1px 1px black;
-  outline: 1px solid black;
-  }*/
+box-shadow: 0 1px 1px black;
+outline: 1px solid black;
+}*/
 
-  .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
-  /*.registration-form, .login-form{
-    max-width: 350px;
-  }
+/*.registration-form, .login-form{
+max-width: 350px;
+}
 
-  .trx-form .form-group{
-    max-width: 350px;
-    }*/
+.trx-form .form-group{
+max-width: 350px;
+}*/
 
-    /*.container{
-      border-top: 1px solid black;
-      border-left: 1px solid black;
-      border-right: 1px solid black;
-      border-bottom: 1px solid black;
-      /*background-color: azure;
-      }*/
+/*.container{
+border-top: 1px solid black;
+border-left: 1px solid black;
+border-right: 1px solid black;
+border-bottom: 1px solid black;
+/*background-color: azure;
+}*/
 
 
-      body{
-        /*background-color: beige;*/
-      }
+body{
+  /*background-color: beige;*/
+}
 
-      /*.footer{
-        padding-top: 5px;
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-        /*height: 50px;*/
-        /*background-color: lavender;*/
-        }*/
+/*.footer{
+padding-top: 5px;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+/*height: 50px;*/
+/*background-color: lavender;*/
+}*/
 
-        /*.navigation{
-          padding-top: 5px;
-          border-top: 1px solid black;
-          border-bottom: 1px solid black;
-          }*/
+/*.navigation{
+padding-top: 5px;
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+}*/
